Fixing alignment of grid items in featured work grid on homepage per issue #62

--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -54,6 +54,7 @@ body.page-homepage {
     .thumbnail-grid {
       @include media-nav {
         display: grid;
+        align-items: start;
         padding-bottom: 190px;
         grid-gap: 0 $padding-md;
         grid-template-rows: auto;
